增加AlipayRingLoadingView防支付宝圆弧旋转LoadingView。

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -162,6 +162,11 @@
             app:plv_num="6"
             app:plv_start_color="#33FF0000" />
 
+        <com.zh.cavas.sample.widget.AlipayRingLoadingView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:arlv_arc_color="#FF0000" />
+
         <com.zh.cavas.sample.widget.DownloadProgressView
             android:id="@+id/download_progress"
             android:layout_width="match_parent"
