--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -142,4 +142,20 @@
         <!-- 背景圆的颜色 -->
         <attr name="arlv_bg_circle_color" format="color" />
     </declare-styleable>
+
+    <declare-styleable name="StarsView">
+        <!-- 星星的颜色 -->
+        <attr name="stv_color" format="color" />
+        <!-- 星星的边数 -->
+        <attr name="stv_num" format="integer|dimension|reference" />
+        <!-- 边的线宽 -->
+        <attr name="stv_edge_line_width" format="float|dimension|reference" />
+        <!-- 填充风格 -->
+        <attr name="stv_style" format="enum">
+            <!-- 填满 -->
+            <enum name="fill" value="1" />
+            <!-- 描边 -->
+            <enum name="stroke" value="2" />
+        </attr>
+    </declare-styleable>
 </resources>
