--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -126,9 +126,9 @@
     </declare-styleable>
 
     <declare-styleable name="PolygonLoadingView">
-        <!-- 圆环开始颜色 -->
+        <!-- 开始颜色 -->
         <attr name="plv_start_color" format="color|reference" />
-        <!-- 圆环结束颜色 -->
+        <!-- 结束颜色 -->
         <attr name="plv_end_color" format="color|reference" />
         <!-- 多边形多少条边，至少3条边，如果小于3条，会强制3条 -->
         <attr name="plv_num" format="integer" />
@@ -164,5 +164,14 @@
         <attr name="dev_color" format="color" />
         <!-- 线宽 -->
         <attr name="dev_line_width" format="float|dimension|reference" />
+    </declare-styleable>
+
+    <declare-styleable name="PolygonSettingView">
+        <!-- 开始颜色 -->
+        <attr name="psv_color" format="color|reference" />
+        <!-- 多边形多少条边，至少3条边，如果小于3条，会强制3条 -->
+        <attr name="psv_num" format="integer" />
+        <!-- 边的线宽 -->
+        <attr name="psv_line_width" format="float|dimension|reference" />
     </declare-styleable>
 </resources>
