--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -174,4 +174,15 @@
         <!-- 边的线宽 -->
         <attr name="psv_line_width" format="float|dimension|reference" />
     </declare-styleable>
+
+    <declare-styleable name="HookCheckBox">
+        <!-- 选中时圆的颜色 -->
+        <attr name="hcb_check_circle_color" format="color" />
+        <!-- 未选中时圆的颜色 -->
+        <attr name="hcb_uncheck_circle_color" format="color" />
+        <!-- 钩子的颜色 -->
+        <attr name="hcb_hook_color" format="color" />
+        <!-- 是否选中 -->
+        <attr name="hcb_is_check" format="boolean" />
+    </declare-styleable>
 </resources>
