HookCheckBox增加镂空风格。

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -215,6 +215,26 @@
             android:layout_margin="10dp"
             app:hcb_is_check="true" />
 
+        <com.zh.cavas.sample.widget.HookCheckBox
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            app:hcb_check_circle_color="#6576D5"
+            app:hcb_is_check="false"
+            app:hcb_line_width="1dp"
+            app:hcb_style="hollow_out"
+            app:hcb_uncheck_circle_color="#818181" />
+
+        <com.zh.cavas.sample.widget.HookCheckBox
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            app:hcb_check_circle_color="#6576D5"
+            app:hcb_is_check="true"
+            app:hcb_style="hollow_out"
+            app:hcb_line_width="1dp"
+            app:hcb_uncheck_circle_color="#818181" />
+
         <com.zh.cavas.sample.widget.DownloadProgressView
             android:id="@+id/download_progress"
             android:layout_width="match_parent"
