--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -238,10 +238,17 @@
 
         <ImageView
             android:id="@+id/vivo_loading_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_margin="10dp"
             android:background="@drawable/vigour_progress_anim" />
+
+        <ImageView
+            android:id="@+id/vivo_polygon_loading"
+            android:layout_width="30dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            tools:src="@drawable/vivo_polygon_loading" />
 
         <com.zh.cavas.sample.widget.DownloadProgressView
             android:id="@+id/download_progress"
