增加FourRotateDotView，4个点不断旋转的样式，加载View。

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -285,6 +285,11 @@
             app:pallv_line_width="1.5dp"
             app:pallv_style="fill" />
 
+        <com.zh.cavas.sample.widget.FourRotateDotView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp" />
+
         <com.zh.cavas.sample.widget.DownloadProgressView
             android:id="@+id/download_progress"
             android:layout_width="match_parent"
