--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="dotColor">#B4B4B4</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
