--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,11 @@
     <style name="BaseSeekBar.Gray" parent="BaseSeekBar">
         <item name="android:progressDrawable">@drawable/app_vivo_seek_bar_bg_gray</item>
     </style>
+
+    <style name="canvas_navigation_icon">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">18dp</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:layout_weight">1</item>
+    </style>
 </resources>
