--- a/app/src/main/res/values/attrs_custom_seek_bar.xml
+++ b/app/src/main/res/values/attrs_custom_seek_bar.xml
@@ -15,6 +15,8 @@
     <attr name="csb_thumb_offset" format="integer|float|dimension" />
     <!-- 当前进度值 -->
     <attr name="csb_progress" format="float" />
+    <!-- 最小进度值 -->
+    <attr name="csb_min_progress" format="float" />
     <!-- 最大进度值 -->
     <attr name="csb_max_progress" format="float" />
   </declare-styleable>
