add: CustomSeekBar支持切换样式

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -315,6 +315,13 @@
         android:layout_width="match_parent"
         android:orientation="vertical">
 
+        <Switch
+            android:id="@+id/custom_seek_bar_switch"
+            android:text="切换自定义进度条的样式"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <TextView
             android:id="@+id/indicator"
             android:ellipsize="none"
@@ -324,7 +331,6 @@
             android:layout_marginStart="5dp"
             android:textColor="@android:color/black"
             android:textSize="12sp"
-            android:layout_marginBottom="5dp"
             tools:text="1分钟" />
 
         <com.zh.cavas.sample.widget.CustomSeekBar
@@ -332,6 +338,8 @@
           android:layout_height="wrap_content"
           android:layout_width="match_parent"
           app:csb_bg="#33242227"
+          android:paddingTop="10dp"
+          android:paddingBottom="10dp"
           app:csb_max_progress="100"
           app:csb_min_progress="0"
           app:csb_progress_bg="#161731"
