add: CustomSeekBar支持的回调，支持按下和松手时的回调

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -337,18 +337,18 @@
           android:id="@+id/custom_seek_bar"
           android:layout_height="wrap_content"
           android:layout_width="match_parent"
-          app:csb_bg="#33242227"
+          app:csb_bg="#F6F7FC"
           android:paddingTop="10dp"
           android:paddingBottom="10dp"
           app:csb_max_progress="100"
           app:csb_min_progress="0"
-          app:csb_progress_bg="#161731"
+          app:csb_progress_bg="#A3A3AD"
           app:csb_progress_height="2dp"
           android:layout_marginStart="15dp"
           android:layout_marginEnd="15dp"
           app:csb_progress_text_color="#161731"
           app:csb_progress_text_size="12sp"
-          app:csb_thumb_color="#161731"
+          app:csb_thumb_color="#A3A3AD"
           app:csb_thumb_radius="8dp"
           tools:csb_progress="0" />
       </LinearLayout>
