--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -296,6 +296,32 @@
         android:layout_margin="10dp"
         android:layout_width="30dp" />
 
+      <FrameLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+        <com.zh.cavas.sample.widget.VerticalSeekBar
+            android:id="@+id/vertical_seek_bar"
+            android:layout_width="wrap_content"
+            app:vsb_progress="10"
+            app:vsb_min_progress="1"
+            app:vsb_max_progress="100"
+            app:vsb_bg="#EDF0FA"
+            app:vsb_progress_bg="#6D79FE"
+            app:vsb_bg_radius="8dp"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/vertical_seek_bar_progress"
+            android:layout_width="wrap_content"
+            android:textColor="#FFFFFF"
+            android:textSize="9sp"
+            android:layout_marginBottom="3dp"
+            android:layout_gravity="bottom|center_horizontal"
+            tools:text="1.0 x"
+            android:layout_height="wrap_content"/>
+      </FrameLayout>
+
       <com.zh.cavas.sample.widget.DownloadProgressView
         android:id="@+id/download_progress"
         android:layout_height="wrap_content"
