--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -296,31 +296,86 @@
         android:layout_margin="10dp"
         android:layout_width="30dp" />
 
-      <FrameLayout
+      <LinearLayout
           android:layout_width="wrap_content"
-          android:layout_height="wrap_content">
-
-        <com.zh.cavas.sample.widget.VerticalSeekBar
-            android:id="@+id/vertical_seek_bar"
-            android:layout_width="wrap_content"
-            tools:vsb_progress="10"
-            app:vsb_min_progress="1"
-            app:vsb_max_progress="100"
-            app:vsb_bg="#EDF0FA"
-            app:vsb_progress_bg="#6D79FE"
-            app:vsb_bg_radius="8dp"
-            android:layout_height="wrap_content"/>
+          android:layout_height="wrap_content"
+          android:orientation="vertical">
 
         <TextView
-            android:id="@+id/vertical_seek_bar_progress"
             android:layout_width="wrap_content"
-            android:textColor="#FFFFFF"
-            android:textSize="9sp"
-            android:layout_marginBottom="3dp"
-            android:layout_gravity="bottom|center_horizontal"
-            tools:text="1.0 x"
+            android:textColor="#161731"
+            android:textSize="15sp"
+            android:text="音量"
+            android:textStyle="bold"
+            android:layout_gravity="center"
             android:layout_height="wrap_content"/>
-      </FrameLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="14dp"/>
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+          <com.zh.cavas.sample.widget.VerticalSeekBar
+              android:id="@+id/vertical_volume_seek_bar"
+              android:layout_width="36dp"
+              android:layout_height="114dp"
+              tools:vsb_progress="50"
+              app:vsb_min_progress="1"
+              app:vsb_max_progress="100"
+              app:vsb_bg="#EDF0FA"
+              app:vsb_progress_bg="#3DDA9B"
+              app:vsb_bg_radius="8dp" />
+        </FrameLayout>
+      </LinearLayout>
+
+      <LinearLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="11dp"
+          android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:textColor="#161731"
+            android:textSize="15sp"
+            android:text="倍速"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="14dp"/>
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+          <com.zh.cavas.sample.widget.VerticalSeekBar
+              android:id="@+id/vertical_speed_seek_bar"
+              android:layout_width="36dp"
+              android:layout_height="114dp"
+              tools:vsb_progress="50"
+              app:vsb_min_progress="1"
+              app:vsb_max_progress="100"
+              app:vsb_bg="#EDF0FA"
+              app:vsb_progress_bg="#6D79FE"
+              app:vsb_bg_radius="8dp" />
+
+          <TextView
+              android:id="@+id/vertical_speed_seek_bar_progress"
+              android:layout_width="wrap_content"
+              android:textColor="#FFFFFF"
+              android:textSize="9sp"
+              android:layout_marginBottom="3dp"
+              android:layout_gravity="bottom|center_horizontal"
+              tools:text="1.0 x"
+              android:layout_height="wrap_content"/>
+        </FrameLayout>
+      </LinearLayout>
 
       <com.zh.cavas.sample.widget.DownloadProgressView
         android:id="@+id/download_progress"
