--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -350,31 +350,10 @@
             android:layout_width="match_parent"
             android:layout_height="14dp"/>
 
-        <FrameLayout
+        <com.zh.cavas.sample.widget.VerticalControlWrapper
+            android:id="@+id/speed_seek_bar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-          <com.zh.cavas.sample.widget.VerticalSeekBar
-              android:id="@+id/speed_seek_bar"
-              android:layout_width="36dp"
-              android:layout_height="114dp"
-              tools:vsb_progress="65"
-              app:vsb_min_progress="0.5"
-              app:vsb_max_progress="1.5"
-              app:vsb_bg="#EDF0FA"
-              app:vsb_progress_bg="#6D79FE"
-              app:vsb_bg_radius="8dp" />
-
-          <TextView
-              android:id="@+id/speed_seek_bar_progress"
-              android:layout_width="wrap_content"
-              android:textColor="#FFFFFF"
-              android:textSize="9sp"
-              android:layout_marginBottom="3dp"
-              android:layout_gravity="bottom|center_horizontal"
-              tools:text="1.0 x"
-              android:layout_height="wrap_content"/>
-        </FrameLayout>
+            android:layout_height="wrap_content"/>
       </LinearLayout>
 
       <LinearLayout
@@ -396,31 +375,10 @@
             android:layout_width="match_parent"
             android:layout_height="14dp"/>
 
-        <FrameLayout
+        <com.zh.cavas.sample.widget.VerticalControlWrapper
+            android:id="@+id/pitch_seek_bar"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-          <com.zh.cavas.sample.widget.VerticalSeekBar
-              android:id="@+id/pitch_seek_bar"
-              android:layout_width="36dp"
-              android:layout_height="114dp"
-              tools:vsb_progress="80"
-              app:vsb_min_progress="-3"
-              app:vsb_max_progress="3"
-              app:vsb_bg="#EDF0FA"
-              app:vsb_progress_bg="#FFCA72"
-              app:vsb_bg_radius="8dp" />
-
-          <TextView
-              android:id="@+id/pitch_seek_bar_progress"
-              android:layout_width="wrap_content"
-              android:textColor="#FFFFFF"
-              android:textSize="9sp"
-              android:layout_marginBottom="3dp"
-              android:layout_gravity="bottom|center_horizontal"
-              tools:text="2.0 x"
-              android:layout_height="wrap_content"/>
-        </FrameLayout>
+            android:layout_height="wrap_content"/>
       </LinearLayout>
 
       <com.zh.cavas.sample.widget.DownloadProgressView
