--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -301,84 +301,104 @@
           android:layout_height="wrap_content"
           android:orientation="vertical">
 
-        <TextView
+        <Switch
+            android:id="@+id/adjust_brain_switch"
             android:layout_width="wrap_content"
-            android:textColor="#161731"
-            android:textSize="15sp"
-            android:text="音量"
-            android:textStyle="bold"
-            android:layout_gravity="center"
+            android:text="夜间模式"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="5dp"
             android:layout_height="wrap_content"/>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="14dp"/>
-
-        <FrameLayout
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-          <com.zh.cavas.sample.widget.VerticalSeekBar
-              android:id="@+id/volume_seek_bar"
-              android:layout_width="36dp"
-              android:layout_height="114dp"
-              tools:vsb_progress="50"
-              app:vsb_min_progress="1"
-              app:vsb_max_progress="100"
-              app:vsb_bg="#EDF0FA"
-              app:vsb_progress_bg="#3DDA9B"
-              app:vsb_bg_radius="8dp" />
-        </FrameLayout>
-      </LinearLayout>
+          <LinearLayout
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
-      <LinearLayout
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="11dp"
-          android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:textColor="#161731"
+                android:textSize="15sp"
+                android:text="音量"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:textColor="#161731"
-            android:textSize="15sp"
-            android:text="倍速"
-            android:textStyle="bold"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"/>
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="14dp"/>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="14dp"/>
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-        <com.zh.cavas.sample.widget.VerticalControlWrapper
-            android:id="@+id/speed_seek_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-      </LinearLayout>
+              <com.zh.cavas.sample.widget.VerticalSeekBar
+                  android:id="@+id/volume_seek_bar"
+                  android:layout_width="36dp"
+                  android:layout_height="114dp"
+                  tools:vsb_progress="50"
+                  app:vsb_min_progress="1"
+                  app:vsb_max_progress="100"
+                  app:vsb_bg="#EDF0FA"
+                  app:vsb_progress_bg="#3DDA9B"
+                  app:vsb_bg_radius="8dp" />
+            </FrameLayout>
+          </LinearLayout>
 
-      <LinearLayout
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="11dp"
-          android:orientation="vertical">
+          <LinearLayout
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="11dp"
+              android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:textColor="#161731"
-            android:textSize="15sp"
-            android:text="音调"
-            android:textStyle="bold"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:textColor="#161731"
+                android:textSize="15sp"
+                android:text="倍速"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"/>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="14dp"/>
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="14dp"/>
 
-        <com.zh.cavas.sample.widget.VerticalControlWrapper
-            android:id="@+id/pitch_seek_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            <com.zh.cavas.sample.widget.VerticalControlWrapper
+                android:id="@+id/speed_seek_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+          </LinearLayout>
+
+          <LinearLayout
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_marginStart="11dp"
+              android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:textColor="#161731"
+                android:textSize="15sp"
+                android:text="音调"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"/>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="14dp"/>
+
+            <com.zh.cavas.sample.widget.VerticalControlWrapper
+                android:id="@+id/pitch_seek_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+          </LinearLayout>
+        </LinearLayout>
       </LinearLayout>
 
       <com.zh.cavas.sample.widget.DownloadProgressView
